# Agents-crewAI

./: .env-sample  Dockerfile  README.md  makefile  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
app/: startup.py
app/sample/: routes.py  schema.py
app/sample/agent/: assistant_agent.py  researcher_agent.py
app/sample/agent/prompt/: assistant_agent_prompt.yaml  researcher_agent_prompt.yaml  sample_task_1_prompt.yaml  sample_task_2_prompt.yaml
app/sample/agent/tasks/: task.py
dev/: C4.md  DEVCONTAINER.md
helpers/: fastapi.json
utils/: llm.py  rag_config.py  rate_limiter.py  settings.py
utils/config/: load_yaml.py  prompt_builder.py
utils/prompt/: fallback_agent_prompt.yaml
