[project]
name = "agent-orquestrador-crewai"

version = "0.1.0"
description = "Fastapi com CrewAI Exemplo basico"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.201.1",
    "crewai-tools>=0.75.0",
    "fastapi[standard]>=0.118.2",
    "google-generativeai>=0.8.5",
    "slowapi>=0.1.9",
    "sqlite-vec>=0.1.6",
    "uvicorn>=0.37.0",
]
